# MITK-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Apps/AcetabularPrep/: AcetabularPrep.qrc  AcetabularPrepMultiStdWidget.cpp  AcetabularPrepMultiStdWidget.h  AcetabularPrepNextBackWidget.cpp  AcetabularPrepNextBackWidget.h  AcetabularPrepNextBackWidget.ui  AcetabularPrepPanel.cpp  AcetabularPrepPanel.h  AcetabularPrepView.cpp  AcetabularPrepView.h  AcetabularPrepView.ui  AcetabularPrepWidget.cpp  AcetabularPrepWidget.h  AcetabularPrepWidget.ui  CMakeLists.txt  CupParameterGadget.cxx  CupParameterGadget.h  CupParameterGadget.ui  ImageWidget.cpp  ImageWidget.h  ImageWidget.qrc  ImageWidget.ui  mitkReamingFilter.cpp  mitkReamingFilter.h
Apps/AcetabularPrep/main/: main.cpp
Apps/BoneSegmentation/: BoneSegmentationWidget.cpp  BoneSegmentationWidget.h  BoneSegmentationWidget.ui  CMakeLists.txt  main.cpp
Apps/Dental/: CMakeLists.txt  SCBDentalClosingDialog.cpp  SCBDentalClosingDialog.h  SCBDentalClosingDialog.ui  SCBDentalMainWindow.h  SCBDentalMainWindow.ui  SCBDentalNavigationPipeline.cxx  SCBDentalNavigationPipeline.ui  SCBDentalPlanningPipeline.cxx  SCBDentalPlanningPipeline.h  SCBDentalRegistrationPipeline.cxx  SCBDentalValidationPipeline.h  SCBWindowsUtil.cpp  SCBWindowsUtil.h  vtkImageBimodalAnalysis.h
Apps/Dental/Resource/: Dental.qrc
Apps/Dental/Resource/hyperblue/: styles.qss
Apps/Dental/controller/: AffineBaseDataInteractor3D.cpp  AffineBaseDataInteractor3D.h  IOController.h  vtkPolyDataWidget.cxx  vtkPolyDataWidget.h
Apps/Dental/view/: DentalStdMultiWidget.cpp  DentalStdMultiWidget.h  SCBDentalHub.cpp  SCBDentalHub.h  SCBDentalMainWindow.cpp  SCBDentalMainWindow.h  SCBDentalMainWindow.ui  SCBDentalPlanningPipeline.cxx  SCBDentalPlanningPipeline.h  SCBDentalPlanningPipeline.ui  SCBDentalReconstructionOptionDialog.cpp  SCBDentalReconstructionOptionDialog.ui  SCBDentalRegistrationPipeline.ui  SCBDentalValidationPipeline.ui
Apps/PlanningSoftware/: AdminMenu.cpp  CMakeLists.txt  CaseManagementWidget.cpp  CaseManagementWidget.ui  app_menu_widget.cpp  app_menu_widget.h  main.cpp  session.cpp  shutdown_dialog.cpp  shutdown_dialog.ui  table_aligncenter_qsqlquery_model.h  theme.cpp
Apps/PlanningSoftware/account_manager/: account.h  account_manager.cpp  account_manager_impl.cpp
Apps/PlanningSoftware/case_manager/: ctdata.cpp  ctdata.h  patient_info.h
Apps/PlanningSoftware/resource/: resource.qrc
Apps/SR/: CMakeLists.txt
Apps/SR/controller/: IOController.cpp  IOController.h  PointSetDataInteractorScrew.cpp  PointSetDataInteractorScrew.h
Apps/SR/view/: CasePlanningSettingsWidget.cpp  CasePlanningSettingsWidget.h  CasePlanningSettingsWidget.ui  CasePlanningWidget.cpp  CasePlanningWidget.h  CasePlanningWidget.ui  GroupBoxGadget.cxx  GroupBoxGadget.h  GroupBoxGadget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PathSettingsWidget.cpp  PathSettingsWidget.h  PathSettingsWidget.ui  PlanningWidget.h  PlanningWidget.ui  SRStdMultiWidget.cpp  SRStdMultiWidget.h  ScrewSettingsWidget.cpp  ScrewSettingsWidget.h  ScrewSettingsWidget.ui  SegmentationWidget.cpp  SegmentationWidget.h  ToolsWidget.cpp  ToolsWidget.h
Apps/SR/view/GroupBoxGadget/: GroupBoxGadget.qrc
Apps/SpineRobotic/: CMakeLists.txt  main.cpp
Apps/SpineRobotic/controller/: IOController.cpp  IOController.h
Apps/SpineRobotic/view/: CasePlanningWidget.cpp  CasePlanningWidget.h  CasePlanningWidget.ui  GroupBoxGadget.cxx  GroupBoxGadget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlanningWidget.cpp  PlanningWidget.h  PlanningWidget.ui  SRStdMultiWidget.cpp  SRStdMultiWidget.h  ScrewSettingsWidget.cpp  ScrewSettingsWidget.ui  SegmentationWidget.cpp  SegmentationWidget.h  SegmentationWidget.ui  ToolsWidget.cpp  ToolsWidget.h  ToolsWidget.ui
Apps/THA/: CMakeLists.txt  main.cpp
Apps/THA/View/: CasePlanningWidget.cxx  CasePlanningWidget.hpp  MainWindow.cpp  MainWindow.ui
Apps/THA/algorithm/: ReamingFilter.cxx  ReamingFilter.h  ReamingFilter2.cxx  ReamingFilter2.h  ReamingFilter3.cpp  ReamingFilter3.hpp  mitkImageVtkMapper2D2.h  mitkReamerProjectRangeSource.h  mitkReamerSource.cpp  mitkReamerSource.h  mitkReamingFilter.cpp  mitkReamingFilter.h  mitkSelectEnclosedPoints.cxx  mitkSelectEnclosedPoints.h
Apps/THA/controller/: IOController.cpp  IOController.h  Pipeline.cpp  Pipeline.h
Apps/THA/model/: CaseModel.cpp
Apps/THA/resources/: resources.qrc
Apps/THA/view/: AcetabularPrepWidget.cpp  AcetabularPrepWidget.h  AcetabularPrepWidget.ui  AdminMenu.h  CaseCreationDialog.cpp  CaseCreationDialog.h  CaseManagementDialog.cpp  CaseManagementDialog.h  CaseManagementDialog.ui  CasePlanningWidget.cxx  CasePlanningWidget.h  CasePlanningWidget.ui  CupImpactionParameterGadget.cpp  CupImpactionParameterGadget.h  CupImpactionParameterGadget.ui  CupParameterGadget.cxx  CupParameterGadget.h  CupParameterGadget.ui  FemoralPrepWidget.cpp  FemoralPrepWidget.h  FemoralPrepWidget.ui  FinalResultsOpenGLNativeWidget.cpp  FinalResultsOpenGLNativeWidget.h  GroupBoxGadget.cxx  GroupBoxGadget.h  GroupBoxGadget.ui  ImageWidget.cpp  ImageWidget.h  ImageWidget.ui  ImplantAssessmentGadget.cxx  ImplantAssessmentGadget.h  ImplantAssessmentGadget.ui  LoginDialog.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  RIORegistrationWidget.cpp  RIORegistrationWidget.h  RIORegistrationWidget.ui  StemParameterGadget.cxx  (+8 more)
Apps/THA/view/PlanningSoftware/: CaseManagementWidget.cpp  CaseManagementWidget.h  CaseManagementWidget.ui  PlanningSoftware.cpp  PlanningSoftware.h  PlanningSoftware.qrc  PlanningSoftware.ui  app_menu_widget.cpp  app_menu_widget.h  case_manage_view.cpp  case_manage_view.h  case_manage_view.ui  login_dialog.cpp  login_dialog.h  login_dialog.ui  login_view.cpp  login_view.h  login_view.ui  patient_table_view.h  session.h  shutdown_dialog.h  table_aligncenter_qsqlquery_model.cpp  theme.h
Apps/THA/view/PlanningSoftware/account_manager/: account_manager.h  account_manager_impl.h  dbmanager.cpp  dbmanager.h
Apps/mitkReamerSource/: CMakeLists.txt  main.cpp
Apps/mitkReamingFilter/: CMakeLists.txt  main.cpp
(+121 files in other folders)
